# ModernOpenGL-Scaffolding

./: CMakeLists.txt
dependencies/GLAD/include/GLAD/: glad.h
src/: config.cpp  glad.c  main.cpp
src/include/: camera.h  config.h  mesh.h  model.h  shader.h
src/shader/: shader.vs
